Fixed left panel overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,24 +133,23 @@ a.hover {
 
 #left-panel {
     position: fixed;
-    top: 5px;
-    left: 7px;
+    top: 0px;
+    left: 0px;
+    padding-left: 5px;
     width: 19.9%;
-    height: 98.2%;
+    height: 100%;
     z-index: 0;
     background-color: white;
-    /* border: 5px solid #222; */
-    overflow:hidden;
+    overflow: hidden;
 }
 
 #left-panel-scroll {
     position: fixed;
     top: 25%;
-    left: 11px;
+    /* left: 11px; */
     width: 19.2%;
-    height: 78%;
+    height: 80%;
     z-index: 10;
-    /* border: 5px solid #222; */
     overflow: scroll;
 }
 
